<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/bg_welcome"
        android:id="@+id/welcome_splash"/>

    <TextView
        android:id="@+id/welcome_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"/>

    <TextView
        android:id="@+id/welcome_app_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_app_website"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/welcome_app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/welcome_text_background"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/welcome_app_version"
            android:id="@+id/welcome_app_version"/>

        <TextView
            android:text="@string/welcome_app_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:id="@+id/welcome_app_copyright"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</RelativeLayout>